--- a/css/day 1 blog.css
+++ b/css/day 1 blog.css
@@ -134,4 +134,21 @@ p {
     p {
       font-size: 200%;
     }
-  }
+}
+
+@media screen and (min-width: 601px) {
+    h3 {
+      font-size: 300%;
+    }
+}
+
+body {
+	background-color: #ffffff;
+	color: #000000;
+}
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: rgb(13, 12, 12);
+		color: #ddd;
+	}
+}
