--- a/css/day 1 blog.css
+++ b/css/day 1 blog.css
@@ -4,7 +4,6 @@
 
 .MenuWrap {
 	background-color: rgb(183, 242, 141);
-	font-family: 'Oswald', sans-serif;
 	font-size: 50%;
 	min-height: 2.75rem;
 	display: flex;
@@ -26,7 +25,6 @@
 @media screen and (min-width: 380px) {
 	.MenuWrap {
 		background-color: rgb(183, 242, 141);
-		font-family: 'Oswald', sans-serif;
 		font-size: 1rem;
 		min-height: 2.75rem;
 		display: flex;
@@ -102,7 +100,7 @@ img {
 	bottom: 0.5rem;
 	right: 1rem;
 	padding: 3px;
-	background-color: #222;
+	background-color: rgb(133, 39, 39);
 	color: #e4e4e4;
 }
 
@@ -198,17 +196,15 @@ body {
 	color: #000000;
 }
 @media (prefers-color-scheme: dark) {
-	body {
+	body,{
 		background-color: rgb(13, 12, 12);
-		color: #ddd;
+		color: #000000;
 	}
 }
 
 .container {
 	font-size: 100%;
 	display: grid;
-	gap:;
-	background-color: rgb(255, 255, 255);
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: 200px;
 	grid-auto-rows: 200px;
@@ -216,32 +212,59 @@ body {
 [class^='grid-item'] {
 	outline: 1px rgb(183, 242, 141) solid;
 	display: grid;
-	background-color: rgb(255, 255, 255);
 	align-items: center;
 	justify-content: center;
 }
 
+[class^='griditem'] {
+	background-color: #ffffff;
+	color: #000000;
+}
+@media (prefers-color-scheme: dark) {
+	[class^='griditem'] {
+		background-color: rgb(13, 12, 12);
+		color: rgb(255, 255, 255);
+	}
+}
+
 .FirstFooterText {
+	justify-content: center;
+	align-items: center;
 	text-align: center;
 }
 
+
 .grid-item1 {
 	grid-column: 1/-1;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 	}
 
 .grid-item2 {
-	grid-column: 1/2;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 	}
 
 .grid-item3 {
 	grid-column: 2/3;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 	}
 
 .grid-item4 {
 	grid-column: 1/2;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 	}
 .grid-item5 {
 	grid-column: 2/3
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 	}
 
 
@@ -249,8 +272,6 @@ body {
 	.container {
 		font-size: 100%;
 		display: grid;
-		gap:10px;
-		background-color: rgb(255, 255, 255);
 		grid-template-columns: repeat(3, 1fr);
 		grid-template-rows: 200px;
 		grid-auto-rows: 200px;
@@ -258,17 +279,18 @@ body {
 	[class^='grid-item'] {
 		outline: 1px rgb(183, 242, 141) solid;
 		display: grid;
-		background-color: rgb(255, 255, 255);
 		align-items: center;
 		justify-content: center;
 	}
 
 	.FirstFooterText {
-		text-align: center;
+		
 	}
 
 	.grid-item1 {
 		grid-column: 1/-1;
+		justify-content: center;
+		align-items: center;
 		}
 
 	.grid-item2 {
@@ -285,21 +307,70 @@ body {
 	.grid-item5 {
 		grid-column: 1/-1
 		}
+	
+	[class^='griditem'] {
+		background-color: #ffffff;
+		color: #000000;
 	}
+	@media (prefers-color-scheme: dark) {
+		[class^='griditem'] {
+			background-color: rgb(13, 12, 12);
+			color: rgb(255, 255, 255);
+		}
+	}
+}
 
-	.subcontainer {
-		font-size: 100%;
-		display: grid;
-		gap:10px;
-		background-color: rgb(255, 255, 255);
-		grid-template-columns: repeat(2, 1fr);
-		grid-template-rows: 30px;
-		grid-auto-rows: 30px;
+.subcontainer {
+	font-size: 100%;
+	display: grid;
+	gap:10px;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: 30px;
+	grid-auto-rows: 30px;
+}
+[class^='subgrid-item'] {
+	display: grid;
+	align-items: center;
+	justify-content: center;
+}
+
+[class^='subgriditem'] {
+	background-color: #ffffff;
+	color: #000000;
+}
+@media (prefers-color-scheme: dark) {
+	[class^='subgriditem'] {
+		background-color: rgb(13, 12, 12);
+		color: rgb(255, 255, 255);
 	}
-	[class^='subgrid-item'] {
-		outline: 1px rgb(255, 255, 255) dashed;
-		display: grid;
-		background-color: rgb(255, 255, 255);
-		align-items: center;
-		justify-content: center;
+}
+
+:root {
+	--MainFont: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	}
+	
+@font-face {
+	font-family: 'Inter-V';
+	src: url('fonts/inter.var.woff2') format('woff2-variations');
+	font-weight: 100 900;
+	font-display: fallback;
+	font-style: oblique 0deg 10deg;
+}
+
+body {
+	background-color: var(--background);
+	color: var(--foreground);
+	transition: all 0.35s;
+	font-size: 1.2em;
+	font-family: 'sans-serif';
+	font-family: var(--MainFont);
+	font-weight: 400;
+  }
+
+@supports (font-variation-settings: 'wdth' 200) {
+	body {
+		font-family: 'Inter-V';
+		font-variation-settings: 'wght' 300, 'slnt' -4;
+		font-feature-settings: 'cv08', 'cv05';
+	}
+}
